--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="/style/style.css">
   	<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
   	<link href="https://fonts.googleapis.com/css?family=Trirong" rel="stylesheet">
-  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+  	<script src="https://maps.googleapis.com/maps/api/js"></script>
   </head>
   <body>
     <div class="container"></div>
